fix: hide scrollbars in content styles and update message module background color for better visibility

--- a/src/content.scss
+++ b/src/content.scss
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Arial", sans-serif;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+  }
 }
 @font-face {
   font-family: "Tangerine";
@@ -17,6 +22,7 @@ body {
   background-repeat: repeat;
   display: flex;
 }
+
 #app {
   height: fit-content;
   width: 100%;
