--- a/src/messageModule.scss
+++ b/src/messageModule.scss
@@ -36,7 +36,7 @@
   margin: 0 0;
   border: 2px dashed rgba(184, 135, 11, 0.2);
   backdrop-filter: blur(4px);
-  background-color: rgba(245, 222, 179, 0.3);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 2px;
   p {
     text-align: center;
